SHAPの記事更新

--- a/shap.html
+++ b/shap.html
@@ -206,7 +206,7 @@
 <ul class="simple">
 <li><p>特徴量が多いデータには不向き：シャープレイ値の計算量は2のn乗のオーダーなので特徴量が多いほど計算に時間がかかる(SHAPは工夫して計算量を減らしているらしい)</p></li>
 <li><p>ヒューマンフレンドリーでない：非技術者にとっては必ずしも分かりやすくない</p></li>
-<li><p>APIが使い辛い：shapのグラフ表示関係のAPIはmodelによってエラー(shap_valuesのデータ型関係)となる場合があった(lgbmで確認)</p></li>
+<li><p>APIがやや難あり：shapのグラフ表示関係のAPIはmodelによってエラー(shap_valuesのデータ型関係)となる場合があった(lgbmで確認)</p></li>
 </ul>
 </section>
 </section>
